# MyCo-ROS2

./: ARCHITECTURE.md  LICENSE  README.md  REPOSITORY_STRUCTURE.md  update_IO_ROS2.md
docs/: API_description.md  API_description_english.md
myco_10_1000mm/myco_10_1000mm_ros2_gazebo/: CMakeLists.txt  package.xml
myco_10_1000mm/myco_10_1000mm_ros2_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
myco_10_1000mm_cartesian_demo/: CMakeLists.txt  package.xml
myco_10_1000mm_cartesian_demo/launch/: myco_10_1000mm_cartesian_demo.launch.py
myco_10_1000mm_cartesian_demo/src/: cartesian_3_positions_node.cpp
myco_15_1300mm/myco_15_1300mm_ros2_gazebo/: CMakeLists.txt  package.xml
myco_15_1300mm/myco_15_1300mm_ros2_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
myco_3_590mm/myco_3_590mm_ros2_gazebo/: CMakeLists.txt  package.xml
myco_3_590mm/myco_3_590mm_ros2_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
myco_3_5_950mm/myco_3_5_950mm_ros2_gazebo/: CMakeLists.txt  package.xml
myco_3_5_950mm/myco_3_5_950mm_ros2_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
myco_5_800mm/myco_5_800mm_ros2_gazebo/: CMakeLists.txt  package.xml
myco_5_800mm/myco_5_800mm_ros2_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
myco_8_1300mm/myco_8_1300mm_ros2_gazebo/: CMakeLists.txt  package.xml
myco_8_1300mm/myco_8_1300mm_ros2_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
myco_basic_api/: CMakeLists.txt  package.xml
myco_basic_api/cfg/: MyCoBasicAPIDynamicReconfigure.cfg
myco_basic_api/launch/: fake_myco_gui.launch.py  myco_basic_api.launch.py  (+1 more)
myco_description/: CMakeLists.txt  package.xml
myco_ethercat_driver/: CMakeLists.txt  package.xml
myco_robot_bringup/: CMakeLists.txt  package.xml
myco_robot_msgs/: CMakeLists.txt  package.xml
myco_ros_control/: CMakeLists.txt  myco_hardware_interface.xml  package.xml
soem_ros2/: SOEM_STARTUP_SEQUENCE.md
(+210 files in other folders)
